--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
         }
       ],
       "sameAs": [
-        "https://www.facebook.com/splashautodetail",
-        "https://www.instagram.com/splashautodetail",
         "https://www.yelp.com/biz/splash-auto-detail-chula-vista"
       ],
       "founder": {
@@ -173,7 +171,7 @@
     <header class="site-header">
       <nav class="nav container">
         <a class="brand" href="#top" aria-label="Splash Auto Detail home">
-          <span class="brand-mark">💦</span>
+          <span class="brand-mark">🏎️</span>
           <span class="brand-text">
             <strong>Splash Auto Detail</strong>
             <span>Chula Vista, CA</span>
@@ -596,7 +594,7 @@
         <div class="footer-content">
           <div class="footer-brand">
             <div class="brand">
-              <span class="brand-mark">💦</span>
+              <span class="brand-mark">🏎️</span>
               <span class="brand-text">
                 <strong>Splash Auto Detail</strong>
                 <span>Chula Vista, CA</span>
