--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
         </button>
 
         <div class="nav-links" id="navLinks">
+          <a href="#gallery">Gallery</a>
           <a href="#services">Services</a>
           <a href="#about">About</a>
           <a href="#hours">Hours</a>
@@ -196,6 +197,7 @@
     <main id="top">
       <!-- HERO -->
       <section class="hero">
+        <div class="hero-bg" style="background-image: url('images/hero-car.jpg');" role="img" aria-label="Detailed luxury vehicle"></div>
         <div class="container hero-grid">
           <div class="hero-content">
             <div class="hero-badge">
@@ -306,6 +308,74 @@
             <div class="divider"></div>
 
             <a class="btn btn-wide btn-secondary" href="#contact">Get a Quote</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- GALLERY -->
+      <section class="section gallery-section" id="gallery">
+        <div class="container">
+          <div class="section-header centered">
+            <h2>Our Work</h2>
+            <p class="section-description">
+              See the quality and attention to detail we bring to every vehicle. From everyday cars to luxury vehicles, we treat each one with professional care.
+            </p>
+          </div>
+
+          <div class="gallery-grid">
+            <div class="gallery-item" data-category="exterior">
+              <img src="images/work-1.jpg" alt="Exterior detailing showcase" loading="lazy" />
+              <div class="gallery-overlay">
+                <h3>Exterior Detailing</h3>
+                <p>Complete wash, wax & shine</p>
+              </div>
+            </div>
+
+            <div class="gallery-item" data-category="interior">
+              <img src="images/work-2.jpg" alt="Interior detailing showcase" loading="lazy" />
+              <div class="gallery-overlay">
+                <h3>Interior Deep Clean</h3>
+                <p>Restored to showroom condition</p>
+              </div>
+            </div>
+
+            <div class="gallery-item" data-category="exterior">
+              <img src="images/work-3.jpg" alt="Luxury vehicle detailing" loading="lazy" />
+              <div class="gallery-overlay">
+                <h3>Premium Vehicle Care</h3>
+                <p>Specialized attention for all vehicles</p>
+              </div>
+            </div>
+
+            <div class="gallery-item" data-category="exterior">
+              <img src="images/work-4.jpg" alt="Paint correction results" loading="lazy" />
+              <div class="gallery-overlay">
+                <h3>Paint Correction</h3>
+                <p>Removing swirls & imperfections</p>
+              </div>
+            </div>
+
+            <div class="gallery-item" data-category="interior">
+              <img src="images/work-5.jpg" alt="Leather conditioning service" loading="lazy" />
+              <div class="gallery-overlay">
+                <h3>Leather Conditioning</h3>
+                <p>Premium interior care</p>
+              </div>
+            </div>
+
+            <div class="gallery-item" data-category="interior">
+              <img src="images/work-6.jpg" alt="Professional detailing service" loading="lazy" />
+              <div class="gallery-overlay">
+                <h3>Professional Detailing</h3>
+                <p>Expert care for all vehicles</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery-filter">
+            <button class="filter-btn active" data-filter="all">All Work</button>
+            <button class="filter-btn" data-filter="exterior">Exterior</button>
+            <button class="filter-btn" data-filter="interior">Interior</button>
           </div>
         </div>
       </section>
@@ -606,6 +676,7 @@
           <div class="footer-links">
             <div class="footer-column">
               <h4>Quick Links</h4>
+              <a href="#gallery">Gallery</a>
               <a href="#services">Services</a>
               <a href="#about">About Us</a>
               <a href="#hours">Hours</a>
